fix control dots covering link

--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -97,3 +97,8 @@ button {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.external-link {
+  display: block;
+  margin-bottom: 20px; /* Adjust the value as needed */
+}
